# api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  rustfmt.toml  schema.sql
src/: config.rs  errors.rs  main.rs  state.rs
src/models/: crud.rs  mod.rs  user.rs
src/models/user/: mod.rs  model.rs  repo.rs
src/routes/: user.rs
src/security/: mod.rs  passwd.rs
src/web/: mod.rs
src/web/payloads/: user.rs
src/web/routes/: user.rs
