[package]
name = "redconflict-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ASYNC WEB / HTTP / JSON
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"

# Data
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = "0.4.38"

# Utils
derive_more = { version = "1.0.0", features = ["from", "display", "debug"] }

# Database
#sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }