[package]
name = "redconflict-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ASYNC WEB / HTTP / JSON
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
axum-valid = { version = "0.20.0" }

# Data
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }

# Utils
derive_more = { version = "1.0.0", features = ["from", "display", "debug"] }

# Database
# Raw SQL
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ] }

# Password
argon2 = { version = "0.5.3" }
validator = { version = "0.18.1", features = ["derive"] }
